sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: illegal start of simple expression
    var inutile =  true
    ^